--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ comfoairq_homie/__pycache__/*
 comfoairq_homie.yml
 comfoairq_homie/homie_device/__pycache__/*
 comfoairq_homie/comfoairq/__pycache__/*
+.vscode/
+comfoairq_homie.egg-info/
